--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: I Did a Thing! 
+title: Hello Jon. 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Sarah's First CollectionBuilder Repository!
+tagline: Apologies for the deception, but I wanted to make sure you started reading, so I thought it best not to announce myself.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "The FitnessGram™ Pacer Test is a multistage aerobic capacity test that progressively gets more difficult as it continues. The 20 meter pacer test will begin in 30 seconds. Line up at the start. The running speed starts slowly, but gets faster each minute after you hear this signal. [beep] A single lap should be completed each time you hear this sound. [ding] Remember to run in a straight line, and run as long as possible. The second time you fail to complete a lap before the sound, your test is over. The test will begin on the word start. On your mark, get ready, start."
