--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -111,10 +111,10 @@ icon-audio: gramophone
 icon-video: eye
 icon-pdf: filesmile
 icon-record: fileghost
-#   icon-compound-object: collection
-#   icon-multiple: postcard
-#   icon-default: file-earmark # fall back icon
-#   icon-back-to-top: arrow-up-square # scroll to top icon
+icon-compound-object: collection
+icon-multiple: postcard
+icon-default: file-earmark # fall back icon
+icon-back-to-top: arrow-up-square # scroll to top icon
 arrow-left: catback
 arrow-right: catforward
-#   arrow-down: arrow-down
+arrow-down: arrow-down
